--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-dark bg-transparenet">
-                <span class="navbar-brand" href="#">Contact</span>
+                <span class="navbar-brand" href="#">Welcome to Cloudshaykh. Mohsin Khan's personal website</span>
                 <span class="navbar-text ml-auto d-none d-sm-inline-block">Contact</span>
                 <span class="navbar-text d-none d-sm-inline-block">mohsin@cloudshaykh.com</span>
             </nav>
