--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>Stay connected</p>
             <nav class="footer-social-links">
                 <a href="mailto:mohsin@cloudshaykh.com" class="social-link"><i class="mdi mdi-google"></i></a>
-                <a href="mailto:mohsin@cloudshaykh.com" class="social-link"><i class="mdi mdi-google"></i></a>
+                <a href="https://www.linkedin.com/in/mohsin-khan-12ab49168/" class="social-link"><i class="mdi mdi-linkedin"></i></a>
             </nav>
         </div>
     </main>
