--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     <main class="my-auto">
         <div class="container">
             <h1 class="page-title">Under Maintenance</h1>
-            <p class="page-description">We should be back shortly. Thank you for your patience
+            <p class="page-description">We should be back shortly. Thank you for your patience!
             </p>
-            <p>Stay connected</p>
+            <h1 style="color:black"> Stay connected </h1>
             <nav class="footer-social-links">
+                <a  class="navbar-text d-none d-sm-inline-block" href="assets/Mohsin_Resume_2023.pdf" download> Resume </a>
+                <br/>
                 <a href="https://github.com/jibril101" class="social-link"><i class="mdi mdi-github-box"></i></a>
                 <a href="mailto:mohsin@cloudshaykh.com" class="social-link"><i class="mdi mdi-google"></i></a>
                 <a href="https://www.linkedin.com/in/mohsin-khan-12ab49168/" class="social-link"><i class="mdi mdi-linkedin"></i></a>
