added styling to resume link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </p>
             <h1 style="color:black"> Stay connected </h1>
             <nav class="footer-social-links">
-                <a  class="navbar-text d-none d-sm-inline-block" href="assets/Mohsin_Resume_2023.pdf" download> Resume </a>
+                <a  href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color: black;" download>Resume</a>
                 <br/>
                 <a href="https://github.com/jibril101" class="social-link"><i class="mdi mdi-github-box"></i></a>
                 <a href="mailto:mohsin@cloudshaykh.com" class="social-link"><i class="mdi mdi-google"></i></a>
