add resume to top and email clickable

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="container">
             <nav class="navbar navbar-dark bg-transparenet">
                 <span class="navbar-brand" href="#">Welcome to Cloudshaykh! Mohsin Khan's personal website</span>
-                <span class="navbar-text ml-auto d-none d-sm-inline-block">Contact</span>
-                <span class="navbar-text d-none d-sm-inline-block">mohsin@cloudshaykh.com</span>
+                <span class="navbar-text ml-auto d-none d-sm-inline-block"><a  href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white;" download>Resume</a></span>
+                <span class="navbar-text d-none d-sm-inline-block "><a href="mailto:mohsin@cloudshaykh.com" class="effect-shine navbar-brand">mohsin@cloudshaykh.com</a></span>
             </nav>
         </div>
     </header>
