added resume to top

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="my-auto">
         <div class="container">
             <h1 class="page-title">Under Maintenance</h1>
-            <p class="page-description">We should be back shortly. Thank you for your patience!
+            <p class="page-description">We should be up shortly. Thank you for your patience!
             </p>
             <h1 style="color:black"> Stay connected </h1>
             <nav class="footer-social-links">
