white resume text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="https://github.com/jibril101" class="social-link"><i class="mdi mdi-github-box"></i></a>
                 <a href="mailto:mohsin@cloudshaykh.com" class="social-link"><i class="mdi mdi-google"></i></a>
                 <a href="https://www.linkedin.com/in/mohsin-khan-12ab49168/" class="social-link"><i class="mdi mdi-linkedin"></i></a>
-                <a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:black; margin-right:16px;" download><strong>Resume</strong></a>
+                <a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white; margin-right:16px;" download><strong>Resume</strong></a>
             </nav>
         </div>
     </main>
