link to microservice example

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     </header>
     <main class="my-auto">
         <div class="container">
+            <br/>
+            <span class="navbar-text ml-auto d-none d-sm-inline-block"><a  href="http://app.cloudshaykh.com" class="effect-shine navbar-brand" style="color:rgb(9, 3, 125); font-size: 38px;" download>Microservice App Example</a></span>
+            <br/>
             <h1 class="page-title">Under Maintenance</h1>
             <p class="page-description">We should be up shortly. Thank you for your patience!
             </p>
