--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <main class="my-auto">
         <div class="container">
             <br/>
-            <span class="navbar-text ml-auto d-none d-sm-inline-block"><a  href="http://app.cloudshaykh.com" class="effect-shine navbar-brand" style="color:rgb(9, 3, 125); font-size: 38px;" download>Microservice App Example</a></span>
+            <span class="navbar-text ml-auto d-none d-sm-inline-block"><a  href="http://app.cloudshaykh.com" class="effect-shine navbar-brand" style="color:white; font-size: 38px;" download>Microservice App Example</a></span>
             <br/>
             <h1 class="page-title">Under Maintenance</h1>
             <p class="page-description">We should be up shortly. Thank you for your patience!
             </p>
-            <h1 style="color:black"> Stay connected </h1>
+            <h1 style="color:white"> Stay connected </h1>
             <nav class="footer-social-links">
                 <a href="https://github.com/jibril101" class="social-link"><i class="mdi mdi-github-box"></i></a>
                 <a href="mailto:mohsin@cloudshaykh.com" class="social-link"><i class="mdi mdi-google"></i></a>
