--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
             <br/>
             <span class="navbar-text ml-auto d-none d-sm-inline-block"><a  href="http://app.cloudshaykh.com" class="effect-shine navbar-brand" style="color:white; font-size: 38px;" download>Microservice App Example</a></span>
             <br/>
-            <h1 class="page-title">Under Maintenance</h1>
-            <p class="page-description">We should be up shortly. Thank you for your patience!
+            <h1 class="page-title">About Me</h1>
+            <p class="page-description" style="color:rgb(172, 202, 247)">My name is Mohsin Khan, I am a Software Engineer specializing in devOps. 
+                The Microservice App is currently down, you can find the link to it in my github.
             </p>
             <h1 style="color:white"> Stay connected </h1>
             <nav class="footer-social-links">
