--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
             <h1 class="page-title">About Me</h1>
             <p class="page-description" style="color:rgb(172, 202, 247)">My name is Mohsin Khan, I am a Software Engineer specializing in devOps. 
                 The Microservice App is currently down, you can find the link to it in my github.
+                Some things I do:
+                - Develop and Maintain Cloud Infrastructure
+                - Provide 
             </p>
             <h1 style="color:white"> Stay connected </h1>
             <nav class="footer-social-links">
                 <a href="https://github.com/jibril101" class="social-link"><i class="mdi mdi-github-box"></i></a>
                 <a href="mailto:mohsin@cloudshaykh.com" class="social-link"><i class="mdi mdi-google"></i></a>
                 <a href="https://www.linkedin.com/in/mohsin-khan-12ab49168/" class="social-link"><i class="mdi mdi-linkedin"></i></a>
+                <a href="https://substack.com/profile/121295884-mohsin-khan" class="social-link"><i class="mdi mdi-blogger"></i></a>
                 <a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white; margin-right:16px;" download><strong>Resume</strong></a>
             </nav>
         </div>
