--- a/index.html
+++ b/index.html
@@ -17,30 +17,44 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-dark bg-transparenet">
-                <span class="navbar-brand"><a href="#" style="font-size: 24px;">Welcome to Cloudshaykh! Mohsin Khan's personal website</a></span>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#stay-connected">Stay connected</a></li>
+                </ul>
                 <span class="navbar-text ml-auto d-none d-sm-inline-block"><a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white;" download>Resume</a></span>
                 <span class="navbar-text d-none d-sm-inline-block "><a href="mailto:mohsin@cloudshaykh.com" class="effect-shine navbar-brand">mohsinak49@gmail.com</a></span>
             </nav>
         </div>
     </header>
     <main class="my-auto">
-        <div class="container">
-            <br/>
-            <span class="navbar-text ml-auto d-none d-sm-inline-block"><a  href="http://app.cloudshaykh.com" class="effect-shine navbar-brand" style="color:white; font-size: 38px;" download>Microservice App Example</a></span>
-            <br/>
-            <h1 class="page-title">About Me</h1>
-            <p class="page-description" style="color:rgb(172, 202, 247)">My name is Mohsin Khan, I am a Software Engineer specializing in devOps. 
-                The Microservice App is currently down, you can find the link to it in my github.
-            </p>
+        <section id="about-me">
+            <div class="container main-content">       
+                <h1 class="page-title">About Me</h1>
+                <p class="page-description" style="color:rgb(172, 202, 247)">My name is Mohsin Khan, I am a Software Engineer specializing in devOps. 
+                    The Microservice App is currently down, you can find the link to it in my github.
+                </p>
+            </div>
+        </section>
+        <section id="Works">
+            <div class="container main content">
+                <br/>
+                <span class="navbar-text ml-auto d-none d-sm-inline-block"><a  href="http://app.cloudshaykh.com" class="effect-shine navbar-brand" style="color:white; font-size: 38px;" download>Microservice App Example</a></span>
+                <br/>
+            </div>
+        </section>
+        <section id="Stay-connected">
+            <div class="container main-content">
             <h1 style="color:white"> Stay connected </h1>
-            <nav class="footer-social-links">
-                <a href="https://github.com/jibril101" class="social-link"><i class="mdi mdi-github-box"></i></a>
-                <a href="mailto:mohsin@cloudshaykh.com" class="social-link"><i class="mdi mdi-google"></i></a>
-                <a href="https://www.linkedin.com/in/mohsin-khan-12ab49168/" class="social-link"><i class="mdi mdi-linkedin"></i></a>
-                <a href="https://substack.com/profile/121295884-mohsin-khan" class="social-link"><i class="mdi mdi-blogger"></i></a>
-                <a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white; margin-right:16px;" download><strong>Resume</strong></a>
-            </nav>
-        </div>
+                <nav class="footer-social-links">
+                    <a href="https://github.com/jibril101" class="social-link"><i class="mdi mdi-github-box"></i></a>
+                    <a href="mailto:mohsin@cloudshaykh.com" class="social-link"><i class="mdi mdi-google"></i></a>
+                    <a href="https://www.linkedin.com/in/mohsin-khan-12ab49168/" class="social-link"><i class="mdi mdi-linkedin"></i></a>
+                    <a href="https://substack.com/profile/121295884-mohsin-khan" class="social-link"><i class="mdi mdi-blogger"></i></a>
+                    <a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white; margin-right:16px;" download><strong>Resume</strong></a>
+                </nav>
+            </div>
+        </section>
     </main>
+    <script src="smmothScrolling.js"></script>
 </body>
 </html>
