--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 
     <header>
         <div class="container">
-            <nav class="navbar navbar-dark bg-transparenet">
-                <span class="navbar-brand"><a href="#" style="font-size: 24px;">Welcome to Cloudshaykh! Mohsin Khan's personal website</a></span>
-                <span class="navbar-text ml-auto d-none d-sm-inline-block"><a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white;" download>Resume</a></span>
-                <span class="navbar-text d-none d-sm-inline-block "><a href="mailto:mohsin@cloudshaykh.com" class="effect-shine navbar-brand">mohsinak49@gmail.com</a></span>
-            </nav>
+            <div class="navbar-container">
+                <nav class="navbar navbar-dark bg-transparenet">
+                    <span class="navbar-brand"><a href="#" style="font-size: 24px;">Welcome to Cloudshaykh! Mohsin Khan's personal website</a></span>
+                    <span class="navbar-text ml-auto d-none d-sm-inline-block"><a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white;" download>Resume</a></span>
+                    <span class="navbar-text d-none d-sm-inline-block "><a href="mailto:mohsin@cloudshaykh.com" class="effect-shine navbar-brand">mohsinak49@gmail.com</a></span>
+                </nav>
+            </div>
         </div>
     </header>
     <main class="my-auto">
