--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <br/>
             <div class="info-box">
                 <h1 class="page-title">About Me</h1>
-                <p class="page-description" style="color:rgb(172, 202, 247)">My name is Mohsin Khan, I am a Software Engineer specializing in DevOps.
+                <p class="page-description" style="color:rgb(172, 202, 247)">My name is Mohsin Khan. I am a Software Engineer specializing in DevOps and Backend Development.
                     <br/>
                     <br/>
-                    The Microservice App is currently down, you can find the link to it in my github.
+                    The Microservice App is currently down. You can find the link to it in my github.
                 </p>
             </div>
             <br/>
