added custom solutions, portfoliio, footer, css

--- a/index.html
+++ b/index.html
@@ -26,18 +26,63 @@
             </div>
         </div>
     </header>
-    <main class="my-auto">
+    <main class="site-content">
         <div class="container">
             <br/>
-                <span class="navbar-text ml-auto d-none d-sm-inline-block"><a  href="http://app.cloudshaykh.com" class="effect-shine navbar-brand" style="color:white; font-size: 38px;" download>Microservice App Example</a></span>
             <br/>
-            <div class="info-box">
-                <h1 class="page-title">About Me</h1>
-                <p class="page-description" style="color:rgb(172, 202, 247)">My name is Mohsin Khan. I am a Software Engineer specializing in DevOps and Backend Development.
-                    <br/>
-                    <br/>
-                    The Microservice App is currently down. You can find the link to it in my github.
-                </p>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="info-box">
+                        <h1 class="page-title">About Me</h1>
+                        <p class="page-description" style="color:rgb(172, 202, 247)">My name is Mohsin Khan. I am a Software Engineer specializing in DevOps and Backend Development.
+                            <br/>
+                            <br/>
+                            The Microservice App is currently down. You can find the link to it in my github.
+                        </p>
+                    </div>
+                </div>
+                <div class="info-box">
+                    <h1 class="page-title">Portfolio</h1>
+                    <p class="page-description" style="color:rgb(172, 202, 247)">
+                        <span class="navbar-text ml-auto d-none d-sm-inline-block"><a  href="http://app.cloudshaykh.com" class="effect-shine navbar-brand" style="color:white; font-size: 28px;" download>Microservice App Example</a></span>
+                        <br/>
+                        <br/>
+                        The Microservice App is currently down. It should be up shortly.You can find the link to it in my github.
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <div class="info-box" style="margin-top: 50px;">
+                        <h1 class="page-title">Custom Solutions</h1>
+                        <p class="page-description services-description">
+                            <span style="font-weight: bold;">DevOps Consulting</span>
+                            <ul class="services-list">
+                                <li>Providing guidance and best practices for implementing DevOps principles and processes</li>
+                                <li>Assess clients current DevOps setups and suggest improvements</li>
+                                <li>Streamline CI/CD pipelines and eliminate bottlenecks</li>
+                            </ul>
+                            <br>
+                            <span style="font-weight: bold;">Infrastructure As Code</span>
+                            <ul>
+                                <li>Define infrastructure parametrized for different environments</li>
+                                <li>Test Disaster and recovery with IaC</li>
+                            </ul>
+                            <br>
+                            <span style="font-weight: bold;">Replatforming Infrastructure</span>
+                            <ul>
+                                <li>Convert from VM deployments to Kubernetes deployments</li>
+                                <li>Setup Kubernetes clusters with high availability and fault tolerance</li>
+                            </ul>
+                            <span style="font-weight: bold;">Training and Knowledge Transfer</span>
+                            <ul>
+                                <li>Conduct training sessions and workshops on topics such as DevOps, CI/CD, and Docker with developers</li>
+                                <li>Transfer knowledge to the development team, enabling them to handle DevOps-related tasks independently</li>
+                            </ul>
+                        </p>
+                        
+                        
+                        <a href="https://calendly.com/mohsinak49/30m" class="btn btn-primary">Book Free Consult</a>
+                    </div>
+                </div>
             </div>
             <br/>
             <span class="effect-shine navbar-brand" style="color:white; font-size: 38px;"> Stay connected </span>
@@ -51,7 +96,21 @@
                     <a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white; margin-right:16px;" download><strong>Resume</strong></a>
                 </nav>
             </div>
+
+            <!-- <section class="testimonial-section" style="margin-top: 10px;">
+                <div class="container">
+                        <div class="testimonial-content">
+                          <p class="testimonial-text">"Mohsin is a talented and effective DevOps Engineer with exceptional skills and dedication to his work. He possesses a strong understanding of DevOps principles and tools and while working at Awesense was always looking for ways to improve the efficiency and coverage of our systems. He creates a collaborative and supportive work environment, making him a pleasure to work with."</p>
+                          <p class="testimonial-author">--Greg Toews, Awesense Wireless</p>
+                      </div>
+                </div> -->
+            </section>
         </div>
+        <br/>
+        <br/>
+        <footer class="site-footer">
+            <p>&copy; 2023 Cloudshaykh. All rights reserved.</p>
+        </footer>
     </main>
 </body>
 </html>
