add professional interests/passion

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <div class="col-md-6">
                     <div class="info-box">
                         <h1 class="page-title">About Me</h1>
-                        <p class="page-description" style="color:rgb(172, 202, 247)">My name is Mohsin Khan. I am a Software Engineer specializing in DevOps and Backend Development.
+                        <p class="page-description" style="color:rgb(172, 202, 247)">My name is Mohsin Khan. I am a Software Engineer specializing in DevOps and Backend Development. 
                             <br/>
                             <br/>
-                            The Microservice App is currently down. You can find the link to it in my github.
+                            I have a passion for networks and cybersecurity. A space I hope to contribute to.
                         </p>
                     </div>
                 </div>
