--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <p class="page-description" style="color:rgb(172, 202, 247)">My name is Mohsin Khan. I am a Software Engineer specializing in DevOps and Backend Development. 
                             <br/>
                             <br/>
-                            I have a passion for networks and cybersecurity. A space I hope to contribute to.
+                            I have a passion for networks and cybersecurity, a space in which I hope to contribute.
                         </p>
                     </div>
                 </div>
