--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="navbar-container">
                 <nav class="navbar navbar-dark bg-transparenet">
                     <span class="navbar-brand"><a href="#" style="font-size: 24px;">Welcome to Cloudshaykh! Mohsin Khan's personal website</a></span>
-                    <span class="navbar-text ml-auto d-none d-sm-inline-block"><a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white;" download>Resume</a></span>
+                    <!-- <span class="navbar-text ml-auto d-none d-sm-inline-block"><a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white;" download>Resume</a></span> -->
                     <span class="navbar-text d-none d-sm-inline-block "><a href="mailto:mohsin@cloudshaykh.com" class="effect-shine navbar-brand">mohsinak49@gmail.com</a></span>
                 </nav>
             </div>
@@ -93,7 +93,7 @@
                     <a href="mailto:mohsin@cloudshaykh.com" class="social-link"><i class="mdi mdi-google"></i></a>
                     <a href="https://www.linkedin.com/in/mohsin-khan-12ab49168/" class="social-link"><i class="mdi mdi-linkedin"></i></a>
                     <a href="https://substack.com/profile/121295884-mohsin-khan" class="social-link"><i class="mdi mdi-blogger"></i></a>
-                    <a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white; margin-right:16px;" download><strong>Resume</strong></a>
+                    <!-- <a href="assets/Mohsin_Resume_2023.pdf " class="effect-shine navbar-brand" style="color:white; margin-right:16px;" download><strong>Resume</strong></a> -->
                 </nav>
             </div>
 
